# modular-diffusion

./: README.md  cli.py  pyproject.toml  quick_test.sh  requirements.txt
models/: diffusion_model.py  vae.py
pipelines/: wanvideo_pipeline.py
src/: __init__.py  cli.py
src/cli/: main.py
src/configs/: __init__.py  debug.py  factory.py
src/configs/models/wanvideo/: __init__.py  shared_config.py  vae.py  wan_t2v_14B.py  wan_t2v_1_3B.py
src/configs/wanvideo/: shared_config.py  wan_i2v_14B.py
src/core/: __init__.py  component.py  config.py  dtype.py  factory.py  registry.py  torch_component.py
src/models/: __init__.py  diffusion_model.py  t5_encoder.py  vae.py
src/models/base/: scheduler.py
src/models/diffusion/: __init__.py  base.py  wandit.py
src/models/text_encoders/: __init__.py  base.py  t5.py
src/models/vae/: __init__.py  base.py  wanvae.py
src/models/wan/: __init__.py  attention.py  blocks.py  model.py  utils.py  vae.py
src/pipelines/: __init__.py  base.py  wanvideo_pipeline.py
src/pipelines/wanvideo/: pipeline.py
src/schedulers/: __init__.py  base.py  euler_scheduler.py  flow_dpm_scheduler.py  flow_scheduler.py  flow_unipc.py
src/utils/: config.py  context.py  debug.py  dtype_utils.py  fp8_utils.py  helpers.py  memory.py  model_analyzer.py  teacache.py
tests/: quick_test.py  test_inference.py
utils/: context.py  memory.py  teacache.py
