[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modular_diffusion"  # Changed hyphen to underscore - Python packages shouldn't have hyphens
version = "0.1.0"
description = "a tinkerer's attempt at an inference engine for diffusion, focusing on core end-to-end inference pipelines for video models, leveraging well-supported external libraries as much as possible for modularity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "packaging>=24.2",
    "pip>=25.0.1",
    "pyproject-toml>=0.1.0",
    "setuptools>=76.1.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[tool.setuptools]
packages = ["src"]
